# Energy_Detect

./: CMakeLists.txt  EnergyDetect  EnergyDetect.cpp
Filter/: particle_filter.h
General/: camera_params.xml  general.hpp
GxCamera/: GxCamera.cpp  GxCamera.hpp
Include/: RunEnergy_AngleSolve.hpp  RunEnergy_Detector.hpp  RunEnergy_Predictor.hpp
Main/: EnergyDetecting.cpp  ImageUpdating.cpp  MeseagesUpdating.cpp  main.cpp
MarkData/: mark.txt
Serial/: Serial.cpp  Serial.hpp
Src/: RunEnergy_AngleSolve.cpp  RunEnergy_Detector.cpp  RunEnergy_Predictor.cpp
Test/: EnergyDetecting.cpp  main.cpp
Test/AngleTest/: AngleTest  AngleTest.cpp
Test/Ceres/: CMakeLists.txt  ceres_example.cpp
Test/Color/: color  color.cpp
Test/Picture/: Picture  Picture.cpp
Test/Time/: Time  Time.cpp
